src/parser/snapshots/rbx_rsml__parser__tests__builtin_padding_two_args.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            Identifier(
                                "Frame",
                            ),
                            5,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        6,
                        ScopeOpen,
                        7,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        MacroCall {
                            name: Node {
                                token: SpannedToken(
                                    8,
                                    MacroCallIdentifier(
                                        Some(
                                            "Padding",
                                        ),
                                    ),
                                    16,
                                ),
                                leading_trivia: None,
                            },
                            body: Some(
                                Delimited {
                                    left: Node {
                                        token: SpannedToken(
                                            16,
                                            ParensOpen,
                                            17,
                                        ),
                                        leading_trivia: None,
                                    },
                                    content: Some(
                                        [
                                            Node {
                                                node: Node {
                                                    token: SpannedToken(
                                                        17,
                                                        NumberOffset(
                                                            "10px",
                                                        ),
                                                        21,
                                                    ),
                                                    leading_trivia: None,
                                                },
                                            },
                                            Node {
                                                node: Node {
                                                    token: SpannedToken(
                                                        21,
                                                        Comma,
                                                        22,
                                                    ),
                                                    leading_trivia: None,
                                                },
                                            },
                                            Node {
                                                node: Node {
                                                    token: SpannedToken(
                                                        23,
                                                        NumberOffset(
                                                            "20px",
                                                        ),
                                                        27,
                                                    ),
                                                    leading_trivia: None,
                                                },
                                            },
                                        ],
                                    ),
                                    right: Some(
                                        Node {
                                            token: SpannedToken(
                                                27,
                                                ParensClose,
                                                28,
                                            ),
                                            leading_trivia: None,
                                        },
                                    ),
                                },
                            ),
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        28,
                                        SemiColon,
                                        29,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            30,
                            ScopeClose,
                            31,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
