src/parser/snapshots/rbx_rsml__parser__tests__builtin_scale.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            Identifier(
                                "Frame",
                            ),
                            5,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        6,
                        ScopeOpen,
                        7,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        MacroCall {
                            name: Node {
                                token: SpannedToken(
                                    8,
                                    MacroCallIdentifier(
                                        Some(
                                            "Scale",
                                        ),
                                    ),
                                    14,
                                ),
                                leading_trivia: None,
                            },
                            body: Some(
                                Delimited {
                                    left: Node {
                                        token: SpannedToken(
                                            14,
                                            ParensOpen,
                                            15,
                                        ),
                                        leading_trivia: None,
                                    },
                                    content: Some(
                                        [
                                            Node {
                                                node: Node {
                                                    token: SpannedToken(
                                                        15,
                                                        Number(
                                                            "1.5",
                                                        ),
                                                        18,
                                                    ),
                                                    leading_trivia: None,
                                                },
                                            },
                                        ],
                                    ),
                                    right: Some(
                                        Node {
                                            token: SpannedToken(
                                                18,
                                                ParensClose,
                                                19,
                                            ),
                                            leading_trivia: None,
                                        },
                                    ),
                                },
                            ),
                            terminator: Some(
                                Node {
                                    token: SpannedToken(
                                        19,
                                        SemiColon,
                                        20,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            21,
                            ScopeClose,
                            22,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
