src/parser/snapshots/rbx_rsml__parser__tests__comment_before_assign.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                11,
                Identifier(
                    "Size",
                ),
                15,
            ),
            leading_trivia: Some(
                [
                    SpannedToken(
                        0,
                        CommentSingle(
                            Some(
                                " comment",
                            ),
                        ),
                        10,
                    ),
                ],
            ),
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    16,
                    Equals,
                    17,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        18,
                        Number(
                            "100",
                        ),
                        21,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    21,
                    SemiColon,
                    22,
                ),
                leading_trivia: None,
            },
        ),
    },
]
